--- a/src/components/RepoList/styles.module.scss
+++ b/src/components/RepoList/styles.module.scss
@@ -12,7 +12,6 @@
   gap: 1rem;
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 1px solid var(--main);
   width: 100%;
   cursor: pointer;
   transition: 0.2s ease;
@@ -25,9 +24,24 @@
 
     .icon {
       color: var(--background-main);
+    }
 
-      &:hover {
-        color: var(--white);
+    a {
+      .icon {
+        &:hover {
+          transition: 0.2s ease;
+          color: var(--text-main);
+        }
+      }
+    }
+
+    .leftSide {
+      .header {
+        .goText {
+          transition: 0.2s ease;
+          transform: translateX(0);
+          opacity: 1;
+        }
       }
     }
   }
@@ -37,15 +51,36 @@
     flex-direction: column;
     align-items: baseline;
     gap: 1rem;
-    flex: 0 0 50%;
 
-    h2 {
-      font-size: 1.5rem;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      word-wrap: break-word;
+    .header {
       width: 25rem;
+
+      h2 {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 1.5rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: break-word;
+      }
+
+      .goText {
+        overflow: hidden;
+        opacity: 0;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 1rem;
+        color: var(--background-main);
+        transform: translateX(-100%);
+        transition: 0.2s ease;
+
+        .icon {
+          color: var(--background-main);
+        }
+      }
     }
   }
 
