--- a/src/pages/Repos/styles.module.scss
+++ b/src/pages/Repos/styles.module.scss
@@ -1,11 +1,9 @@
 .repos {
   width: 100%;
-  height: 100%;
+  margin-bottom: 2rem;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 600px;
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
