--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -29,13 +29,9 @@ html, body, #root {
   font-size: 100%;
   line-height: 1.2;
   width: 100%;
-  height: 100%;
   color: var(--text-main);
-  overflow: hidden;
-}
-
-#root {
   background-color: var(--background-main);
+  overflow: auto;
 }
 
 ol, ul {
@@ -44,7 +40,12 @@ ol, ul {
 
 a {
   text-decoration: none;
-  color: unset;
+  color: var(--link);
+
+  &:hover {
+    text-decoration: underline;
+    color: var(--link-hover);
+  }
 }
 
 blockquote, q {
@@ -108,7 +109,6 @@ input[type="number"]:focus {
   transition: 0.2s ease;
 
   &:hover {
-    color: var(--main);
     transition: 0.2s ease;
   }
 }
