--- a/src/uikit/SearchInput/styles.module.scss
+++ b/src/uikit/SearchInput/styles.module.scss
@@ -1,6 +1,6 @@
 .searchInput {
   width: 20rem;
-  padding: 1rem 1rem;
+  padding: 1rem;
   border: 1px solid var(--input-border-color);
   border-radius: 0.75rem;
 
