--- a/src/components/RepoList/styles.module.scss
+++ b/src/components/RepoList/styles.module.scss
@@ -17,6 +17,10 @@
   transition: 0.2s ease;
   background-color: var(--background-secondary);
 
+  @media (max-width: 900px) {
+    flex-direction: column;
+  }
+
   &:hover {
     background-color: var(--main);
     transition: 0.2s ease;
@@ -52,9 +56,13 @@
     align-items: baseline;
     gap: 1rem;
 
-    .header {
-      width: 25rem;
+    @media (max-width: 900px) {
+      align-items: center;
+      text-align: center;
+    }
 
+    .header {
+      max-width: 25rem;
       h2 {
         display: flex;
         align-items: center;
@@ -64,6 +72,11 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         word-wrap: break-word;
+
+        @media (max-width: 900px) {
+          overflow: auto;
+          white-space: unset;
+        }
       }
 
       .goText {
@@ -77,6 +90,10 @@
         transform: translateX(-100%);
         transition: 0.2s ease;
 
+        @media (max-width: 900px) {
+          display: none;
+        }
+
         .icon {
           color: var(--background-main);
         }
@@ -89,6 +106,11 @@
     flex-direction: column;
     align-items: flex-end;
     gap: 1rem;
+
+    @media (max-width: 900px) {
+      flex-direction: row-reverse;
+      align-items: center;
+    }
 
     .stargazer {
       display: flex;
